--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,15 @@
-.warning,
-.maxLength {
-  display: none;
-}
-
-/******************************/
-#tbody {
-  vertical-align: middle !important;
-}
-/******************************/
-#bookmarkItem {
-  border-left: solid 7px;
-  box-shadow: 0px 4px 10px 0px #24242417;
-}
-/******************************/
-#bookmarkList {
-  transition: all 0.5s;
-}
-/* fix long title */
-h3 {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 /* fix responsive */
-@media screen and (max-width: 425px) {
-  #bookmarkItem {
-    justify-content: center !important;
+@media screen and (min-width: 505px) {
+  #img-re {
+    width: 40% !important;
+    margin-top: -70px !important;
   }
 }
 
 /*************************************/
 :root {
   --c-err: #f62525;
-  --c-muted-red: #ff5543;
+  --c-muted-orange: #c78a2a;
 
   --c-dark: #040911;
   --c-medium-gray: rgba(0, 0, 0, 0.6);
@@ -47,10 +24,10 @@ body {
   font-family: "Kitab";
 }
 .main-text {
-  color: var(--c-muted-red) !important;
+  color: var(--c-muted-orange) !important;
 }
 .main-bg {
-  background-color: var(--c-muted-red) !important;
+  background-color: var(--c-muted-orange) !important;
 }
 
 .fo-ibm {
@@ -73,4 +50,12 @@ body {
 
 .font-kitab-bold {
   font-family: "Kitab Bold";
+}
+
+#img-re {
+  margin-top: -50px;
+}
+
+.logoutBtn:hover {
+  cursor: pointer !important;
 }
