enhance the responsive

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,12 @@
     margin-top: -70px !important;
   }
 }
+@media screen and (min-width: 992px) {
+  .form{
+    width: 50%;
+    margin: auto;
+  }
+}
 
 /*************************************/
 :root {
